[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-router-service"
version = "1.0.0"
description = "A unified API gateway for multiple LLM providers"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0,<0.109.0",
    "uvicorn[standard]>=0.24.0,<0.25.0",
    "pydantic>=2.5.0,<2.6.0",
    "pydantic-settings>=2.1.0,<2.2.0",
    "sqlalchemy>=2.0.0,<2.1.0",
    "openai==1.3.0",
    "httpx==0.25.2",
    "redis>=5.0.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "httpcore==1.0.2",
    "structlog>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/llm_router"]
